rendered/envs/talos/argocd/statefulset-argocd-redis-ha-server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/component: redis
    app.kubernetes.io/name: argocd-redis-ha
    app.kubernetes.io/part-of: argocd
  name: argocd-redis-ha-server
spec:
  podManagementPolicy: OrderedReady
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis-ha
  serviceName: argocd-redis-ha
  template:
    metadata:
      annotations:
        checksum/init-config: bd30e83dfdad9912b6c1cc32a8c26d7d01429a0730f5ee7af380fb593e874d54
      labels:
        app.kubernetes.io/name: argocd-redis-ha
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: argocd-redis-ha
              topologyKey: kubernetes.io/hostname
      automountServiceAccountToken: false
      containers:
        - args:
            - /data/conf/redis.conf
          command:
            - redis-server
          image: public.ecr.aws/docker/library/redis:7.2.7-alpine
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - /readonly-config/trigger-failover-if-master.sh
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - /health/redis_liveness.sh
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 15
          name: redis
          ports:
            - containerPort: 6379
              name: redis
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - /health/redis_readiness.sh
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 15
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - /health/redis_readiness.sh
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 15
          volumeMounts:
            - mountPath: /readonly-config
              name: config
              readOnly: true
            - mountPath: /data
              name: data
            - mountPath: /health
              name: health
        - args:
            - /data/conf/sentinel.conf
          command:
            - redis-sentinel
          image: public.ecr.aws/docker/library/redis:7.2.7-alpine
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - sleep 30; redis-cli -p 26379 sentinel reset argocd
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - /health/sentinel_liveness.sh
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 15
          name: sentinel
          ports:
            - containerPort: 26379
              name: sentinel
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - /health/sentinel_liveness.sh
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 15
            successThreshold: 3
            timeoutSeconds: 15
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - /health/sentinel_liveness.sh
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 15
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /health
              name: health
        - args:
            - /readonly-config/fix-split-brain.sh
          command:
            - sh
          image: public.ecr.aws/docker/library/redis:7.2.7-alpine
          imagePullPolicy: IfNotPresent
          name: split-brain-fix
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /readonly-config
              name: config
              readOnly: true
            - mountPath: /data
              name: data
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: argocd-redis-ha
      terminationGracePeriodSeconds: 60
      volumes:
        - configMap:
            name: argocd-redis-ha-configmap
          name: config
        - configMap:
            defaultMode: 493
            name: argocd-redis-ha-health-configmap
          name: health
        - emptyDir: {}
          name: data
  updateStrategy:
    type: RollingUpdate
