rendered/envs/talos/argocd/networkpolicy-argocd-redis-ha-server-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app.kubernetes.io/component: redis
    app.kubernetes.io/name: argocd-redis-ha
    app.kubernetes.io/part-of: argocd
  name: argocd-redis-ha-server-network-policy
spec:
  egress:
    - ports:
        - port: 6379
          protocol: TCP
        - port: 26379
          protocol: TCP
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-redis-ha
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-redis-ha-haproxy
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-redis-ha
      ports:
        - port: 6379
          protocol: TCP
        - port: 26379
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis-ha
  policyTypes:
    - Ingress
    - Egress
